[project]
name = "nerfinternals"
version = "0.1.1"

dependencies = [
    "nerfstudio" # you may want to consider pinning the version, ie "nerfstudio==0.1.19"
]

[tool.setuptools.packages.find]
include = ["nerfinternals*"]

[project.entry-points.'nerfstudio.dataparser_configs']
llff-data = 'nerfinternals.internals_dataparser_config:llff_data'

[project.entry-points.'nerfstudio.method_configs']
internals_nerf = 'nerfinternals.internals_config:activation_nerf'
internals_mipnerf = 'nerfinternals.internals_config:activation_mipnerf'
internals_nerfacto = 'nerfinternals.internals_config:activation_nerfacto'